--- a/hlp/chat/config/model_config.json
+++ b/hlp/chat/config/model_config.json
@@ -20,7 +20,8 @@
     "ontology": "data/ontology.json",
     "semi_dict": "data/semi_dict.json",
     "dialogues_train": "data/dstc2_train_en.json",
-    "tokenized_data": "data\\dialogues_tokenized.txt"
+    "tokenized_data": "data\\dialogues_tokenized.txt",
+    "kb_indicator_len": 3
   },
   "resource_data": "data\\train.txt",
   "tokenized_data": "data\\train_tokenized.txt",
