完成task训练流程...

--- a/hlp/chat/.gitignore
+++ b/hlp/chat/.gitignore
@@ -9,7 +9,8 @@ __pycache__/
 # Distribution / packaging
 .Python
 #data/
-checkpoint/
+free/checkpoint/
+task/checkpoint/
 build/
 develop-eggs/
 dist/
