修复10-20所提问题...

--- a/hlp/chat/free/config/model_config.json
+++ b/hlp/chat/free/config/model_config.json
@@ -23,5 +23,7 @@
   "batch_size": 64,
   "buffer_size": 20000,
   "beam_size": 3,
-  "epochs": 100
+  "epochs": 100,
+  "start_sign": "start",
+  "end_sign": "end"
 }
