模块重新洗牌

--- a/hlp/stt/ds2/config.json
+++ b/hlp/stt/ds2/config.json
@@ -1,6 +1,6 @@
 {
     "train": {
-        "train_epochs": 4,
+        "train_epochs": 2,
         "data_path": "./number/train",
         "batch_size": 36,
         "num_examples": null
@@ -30,12 +30,15 @@
     },
     "other": {
         "n_mfcc": 20,
-        "index_word_json_path": "index_word_json.json"
+        "index_word_path": "index_word.json"
     },
     "preprocess": {
-        "text_raw_style(文本数据集每行的格式：1是'index string',2是'string',3...)": "",
+        "dataset_name是指不同的语料集的数据预处理方法": "",
+        "dataset_name": "number",
+        "text_raw_style是指文本数据集每行的格式：1是'index string',2是'string',3...)": "",
         "text_raw_style": 2,
-        "text_process_mode(文本处理的方法：en_word(英文单词)或者cn(中文或不带中午的单字符)、en_char(英文字符))": "",
-        "text_process_mode": "cn"
+        "text_process_mode是指文本处理和序列解码的基准：en_word(英文单词)或者cn(中文或不带空格的单字符)、en_char(英文字符))": "",
+        "text_process_mode": "cn",
+        "max_inputs_len": 36
     }
 }
