数据处理部分...

--- a/hlp/chat/free/config/model_config.json
+++ b/hlp/chat/free/config/model_config.json
@@ -6,6 +6,8 @@
   "transformer": {
     "train_data": "checkpoint\\transformer",
     "dict_fn": "data\\transformer_dict.json",
+    "lccc_data": "data\\LCCC.json",
+    "lccc_tokenized_data": "data\\lccc_tokenized.txt",
     "num_layers": 2,
     "d_model": 256,
     "num_heads": 8,
@@ -14,12 +16,12 @@
   },
   "resource_data": "data\\train.txt",
   "tokenized_data": "data\\train_tokenized.txt",
-  "vocab_size": 100000,
+  "vocab_size": 472,
   "enc_vocab_size": 20000,
   "dec_vocab_size": 20000,
   "embedding_dim": 256,
   "layer_size": 1024,
-  "max_train_data_size": 100000,
+  "max_train_data_size": 100,
   "batch_size": 64,
   "buffer_size": 20000,
   "beam_size": 3,
