--- a/hlp/stt/ds2/config.json
+++ b/hlp/stt/ds2/config.json
@@ -2,7 +2,7 @@
     "train": {
         "train_epochs": 2,
         "data_path": "./number/train",
-        "batch_size": 36,
+        "batch_size": 48,
         "num_examples": null
     },
     "test": {
@@ -17,7 +17,7 @@
         "conv_strides": 2,
         "bi_gru_layers": 1,
         "gru_units": 256,
-        "dense_units": 14
+        "dense_units": 12
     },
     "checkpoint": {
         "directory": "./checkpoint",
@@ -25,20 +25,21 @@
         "save_interval": 2
     },
     "record": {
-        "record_path": "./record/record.wav",
-        "record_times": 4
+        "record_path": "./record/record.wav"
     },
     "other": {
         "n_mfcc": 20,
-        "index_word_path": "index_word.json"
+        "index_word_path": "index_word.json",
+        "word_index_path": "word_index.json"
     },
     "preprocess": {
         "dataset_name是指不同的语料集的数据预处理方法": "",
         "dataset_name": "number",
-        "text_raw_style是指文本数据集每行的格式：1是'index string',2是'string',3...)": "",
-        "text_raw_style": 2,
+        "text_raw_style是指文本数据集每行的格式：1是'index string',2是'index\tstring',3是'string')": "",
+        "text_raw_style": 3,
         "text_process_mode是指文本处理和序列解码的基准：en_word(英文单词)或者cn(中文或不带空格的单字符)、en_char(英文字符))": "",
-        "text_process_mode": "cn",
-        "max_inputs_len": 36
+        "text_process_mode": "en_char",
+        "max_inputs_len": 36,
+        "max_targets_len": 1
     }
 }
