--- a/hlp/chat/free/config/config.json
+++ b/hlp/chat/free/config/config.json
@@ -17,6 +17,13 @@
     "max_train_data_size": 36,
     "max_length": 40
   },
+  "smn": {
+    "embedding_dim": 256,
+    "max_sentence": 50,
+    "max_utterance": 10,
+    "units": 512,
+    "vocab_size": 100
+  },
   "resource_data": "data\\train.txt",
   "tokenized_data": "data\\train_tokenized.txt",
   "transformer_checkpoint": "checkpoint\\transformer",
