--- a/hlp/chat/free/config/config.json
+++ b/hlp/chat/free/config/config.json
@@ -22,16 +22,20 @@
     "max_sentence": 50,
     "max_utterance": 10,
     "units": 512,
-    "vocab_size": 100
+    "vocab_size": 2000
   },
+  "seq2seq_dict_fn": "data\\seq2seq_dict.json",
+  "seq2seq_checkpoint": "checkpoint\\seq2seq",
+  "transformer_dict_fn": "data\\transformer_dict.json",
+  "transformer_checkpoint": "checkpoint\\transformer",
+  "smn_dict_fn": "data\\smn_dict_fn",
+  "smn_checkpoint": "checkpoint\\smn",
   "resource_data": "data\\train.txt",
   "tokenized_data": "data\\train_tokenized.txt",
-  "transformer_checkpoint": "checkpoint\\transformer",
-  "transformer_dict_fn": "data\\transformer_dict.json",
-  "seq2seq_checkpoint": "checkpoint\\seq2seq",
-  "seq2seq_dict_fn": "data\\seq2seq_dict.json",
   "lccc_data": "data\\LCCC.json",
   "lccc_tokenized_data": "data\\lccc_tokenized.txt",
+  "douban_tokenized_data": "data\\douban.txt",
+  "ubuntu_tokenized_data": "data\\ubuntu_train.txt",
   "batch_size": 32,
   "buffer_size": 20000,
   "beam_size": 3,
