配置参数提取，将metric移出至外部utils，语音特征可选fbank和mfcc

--- a/hlp/stt/ds2/config.json
+++ b/hlp/stt/ds2/config.json
@@ -1,18 +1,18 @@
 {
     "train": {
+        "if_is_first_train": true,
         "train_epochs": 2,
         "data_path": "./data/LibriSpeech/train-clean-5",
         "batch_size": 48,
-        "num_examples": null,
-        "if_is_first_train": true
+        "num_examples": null
     },
     "test": {
         "data_path": "./data/LibriSpeech/dev-clean-2",
-        "batch_size": 36,
+        "batch_size": 128,
         "num_examples": null
     },
     "model": {
-        "conv_layers": 1,
+        "conv_layers": 3,
         "conv_filters": 256,
         "conv_kernel_size": 11,
         "conv_strides": 2,
@@ -20,7 +20,7 @@
         "gru_units": 256
     },
     "checkpoint": {
-        "directory": "./checkpoint",
+        "directory": "./checkpoints",
         "max_to_keep": 5,
         "save_interval": 2
     },
@@ -28,16 +28,12 @@
         "record_path": "./record/record.wav"
     },
     "other": {
-        "n_mfcc": 20,
-        "index_word_path": "index_word.json",
-        "word_index_path": "word_index.json"
+        "audio_feature_type": "fbank"
     },
     "preprocess": {
-        "dataset_name是指不同的语料集的数据预处理方法": "",
+        "dataset_information_path":"./dataset_information.json",
         "dataset_name": "librispeech",
-        "text_raw_style是指文本数据集每行的格式：1是'index string',2是'index\tstring',3是'string')": "",
-        "text_raw_style": 1,
-        "text_process_mode是指文本处理和序列解码的基准：en_word(英文单词)或者cn(中文或不带空格的单字符)、en_char(英文字符))": "",
+        "text_row_style": 1,
         "text_process_mode": "en_word"
     }
 }
