--- a/hlp/chat/free/config/config.json
+++ b/hlp/chat/free/config/config.json
@@ -25,7 +25,8 @@
     "vocab_size": 2000,
     "max_train_data_size": 36,
     "learning_rate": 0.001,
-    "max_valid_data_size": 100
+    "max_valid_data_size": 100,
+    "max_database_size": 1700
   },
   "seq2seq_dict_fn": "data\\seq2seq_dict.json",
   "seq2seq_checkpoint": "checkpoint\\seq2seq",
@@ -40,6 +41,7 @@
   "douban_tokenized_data": "data\\douban.txt",
   "ubuntu_tokenized_data": "data\\ubuntu_train.txt",
   "ubuntu_valid_data": "data\\ubuntu_valid.txt",
+  "candidate_database": "data\\candidate.json",
   "batch_size": 32,
   "buffer_size": 20000,
   "beam_size": 3,
