--- a/hlp/mt/config/config.json
+++ b/hlp/mt/config/config.json
@@ -4,25 +4,28 @@
   "reverse": "False",
   "en_tokenize_type": "WORD",
   "zh_tokenize_type": "CHAR",
-  "path_to_train_file": "./data/corpus/en-zh_train.txt",
-  "path_to_eval_file": "./data/corpus/en-zh_eval.txt",
-  "encoded_sequences_path_prefix": "./data/encoded_corpus/encoded_sequences_",
-  "tokenizer_path_prefix": "./data/tokenizer/tokenizer_",
+  "val_size": 0.2,
+  "BEAM_SIZE": 3,
+  "validation_freq": 2,
+  "max_checkpoints_num": 5,
+  "checkpoints_save_freq": 5,
   "num_eval": 5,
-  "checkpoint_path_dir": "./checkpoints",
   "BUFFER_SIZE": 20000,
-  "test_size": 0.001,
-  "num_sentences": 100,
+  "EPOCHS": 20,
+  "num_sentences": 1000,
   "BATCH_SIZE": 32,
   "num_layers": 4,
   "d_model": 256,
   "dff": 512,
   "num_heads": 8,
   "dropout_rate" : 0.1,
-  "EPOCHS": 200,
   "max_target_length": 200,
   "start_word": "<start>",
   "end_word": "<end>",
   "target_vocab_size": 8192,
-  "BEAM_SIZE": 3
+  "path_to_train_file": "./data/corpus/en-zh_train.txt",
+  "path_to_eval_file": "./data/corpus/en-zh_eval.txt",
+  "encoded_sequences_path_prefix": "./data/encoded_corpus/encoded_sequences_",
+  "tokenizer_path_prefix": "./data/tokenizer/tokenizer_",
+  "checkpoint_path_dir": "./checkpoints"
 }
