--- a/hlp/stt/ds2/config.json
+++ b/hlp/stt/ds2/config.json
@@ -1,10 +1,9 @@
 {
     "train": {
-        "if_is_first_train": true,
         "train_epochs": 2,
         "data_path": "./data/LibriSpeech/train-clean-5",
         "batch_size": 36,
-        "num_examples": 100
+        "num_examples": 150
     },
     "test": {
         "data_path": "./data/LibriSpeech/dev-clean-2",
@@ -12,11 +11,13 @@
         "num_examples": null
     },
     "model": {
+        "conv_layers": 1,
         "conv_filters": 256,
         "conv_kernel_size": 11,
         "conv_strides": 2,
+        "bi_gru_layers": 1,
         "gru_units": 256,
-        "fc_units": 1024
+        "fc_units": 512
     },
     "checkpoint": {
         "directory": "./checkpoints",
@@ -24,12 +25,12 @@
         "save_interval": 2
     },
     "other": {
-        "audio_feature_type": "fbank"
+        "audio_feature_type": "mfcc"
     },
     "preprocess": {
         "dataset_information_path": "./dataset_information.json",
         "dataset_name": "librispeech",
         "text_row_style": 1,
-        "text_process_mode": "en_word"
+        "text_process_mode": "en_char"
     }
 }
