--- a/hlp/chat/free/config/config.json
+++ b/hlp/chat/free/config/config.json
@@ -1,9 +1,9 @@
 {
   "seq2seq": {
-    "vocab_size": 300,
+    "vocab_size": 600,
     "embedding_dim": 256,
     "units": 1024,
-    "max_train_data_size": 36,
+    "max_train_data_size": 100,
     "max_length": 40
   },
   "transformer": {
@@ -12,9 +12,9 @@
     "num_heads": 8,
     "units": 512,
     "dropout": 0.1,
-    "vocab_size": 300,
+    "vocab_size": 600,
     "embedding_dim": 256,
-    "max_train_data_size": 36,
+    "max_train_data_size": 100,
     "max_length": 40
   },
   "smn": {
@@ -28,24 +28,24 @@
     "max_valid_data_size": 100,
     "max_database_size": 1700
   },
-  "seq2seq_dict_fn": "tensorflow_src\\data\\seq2seq_dict.json",
-  "seq2seq_checkpoint": "tensorflow_src\\checkpoint\\seq2seq",
-  "transformer_dict_fn": "tensorflow_src\\data\\transformer_dict.json",
-  "transformer_checkpoint": "tensorflow_src\\checkpoint\\transformer",
-  "smn_dict_fn": "tensorflow_src\\data\\smn_dict_fn",
-  "smn_checkpoint": "tensorflow_src\\checkpoint\\smn",
+  "seq2seq_dict_fn": "data\\seq2seq_dict.json",
+  "seq2seq_checkpoint": "checkpoint\\seq2seq",
+  "transformer_dict_fn": "data\\transformer_dict.json",
+  "transformer_checkpoint": "checkpoint\\transformer",
+  "smn_dict_fn": "data\\smn_dict_fn",
+  "smn_checkpoint": "checkpoint\\smn",
   "resource_data": "data\\train.txt",
-  "tokenized_data": "tensorflow_src\\data\\train_tokenized.txt",
+  "tokenized_data": "data\\train_tokenized.txt",
   "lccc_data": "data\\LCCC.json",
-  "lccc_tokenized_data": "tensorflow_src\\data\\lccc_tokenized.txt",
+  "lccc_tokenized_data": "data\\lccc_tokenized.txt",
   "douban_tokenized_data": "data\\douban.txt",
   "ubuntu_tokenized_data": "data\\ubuntu_train.txt",
   "ubuntu_valid_data": "data\\ubuntu_valid.txt",
-  "candidate_database": "tensorflow_src\\data\\candidate.json",
+  "candidate_database": "data\\candidate.json",
   "batch_size": 32,
   "buffer_size": 20000,
   "beam_size": 3,
-  "epochs": 1,
+  "epochs": 10,
   "start_sign": "start",
   "end_sign": "end"
 }
