可指定验证数据；显示并保存指标变化图

--- a/hlp/mt/config/config.json
+++ b/hlp/mt/config/config.json
@@ -4,14 +4,17 @@
   "reverse": "False",
   "en_tokenize_type": "WORD",
   "zh_tokenize_type": "CHAR",
-  "val_size": 0.2,
+  "train_size": 0.8,
   "BEAM_SIZE": 3,
-  "validation_freq": 2,
+  "validate_from_txt": "True",
+  "num_validate_sentences": 200,
+  "validation_freq": 1,
   "max_checkpoints_num": 5,
   "checkpoints_save_freq": 5,
+  "checkpoint_name": "4layers512units",
   "num_eval": 5,
   "BUFFER_SIZE": 20000,
-  "EPOCHS": 20,
+  "EPOCHS": 10,
   "num_sentences": 1000,
   "BATCH_SIZE": 32,
   "num_layers": 4,
@@ -23,8 +26,10 @@
   "start_word": "<start>",
   "end_word": "<end>",
   "target_vocab_size": 8192,
+  "result_save_dir": "./data/result/",
   "path_to_train_file": "./data/corpus/en-zh_train.txt",
   "path_to_eval_file": "./data/corpus/en-zh_eval.txt",
+  "path_to_val_file": "./data/corpus/en-zh_val.txt",
   "encoded_sequences_path_prefix": "./data/encoded_corpus/encoded_sequences_",
   "tokenizer_path_prefix": "./data/tokenizer/tokenizer_",
   "checkpoint_path_dir": "./checkpoints"
