--- a/hlp/chat/free/config/config.json
+++ b/hlp/chat/free/config/config.json
@@ -34,8 +34,8 @@
   "transformer_checkpoint": "checkpoint\\transformer",
   "smn_dict_fn": "data\\smn_dict_fn",
   "smn_checkpoint": "checkpoint\\smn",
-  "resource_data": "data\\train.txt",
-  "tokenized_data": "data\\train_tokenized.txt",
+  "resource_data": "data\\xiao_huang_jie.txt",
+  "tokenized_data": "data\\xiao_huang_jie_tokenized.txt",
   "lccc_data": "data\\LCCC.json",
   "lccc_tokenized_data": "data\\lccc_tokenized.txt",
   "douban_tokenized_data": "data\\douban.txt",
