--- a/hlp/chat/free/config/config.json
+++ b/hlp/chat/free/config/config.json
@@ -26,7 +26,7 @@
     "max_train_data_size": 36,
     "learning_rate": 0.001,
     "max_valid_data_size": 100,
-    "max_database_size": 1700
+    "max_database_size": 0
   },
   "seq2seq_dict_fn": "data\\seq2seq_dict.json",
   "seq2seq_checkpoint": "checkpoint\\seq2seq",
@@ -42,6 +42,7 @@
   "ubuntu_tokenized_data": "data\\ubuntu_train.txt",
   "ubuntu_valid_data": "data\\ubuntu_valid.txt",
   "candidate_database": "data\\candidate.json",
+  "solr_server": "http://49.235.33.100:8983/solr/smn/",
   "batch_size": 32,
   "buffer_size": 20000,
   "beam_size": 3,
