--- a/hlp/mt/config/config.json
+++ b/hlp/mt/config/config.json
@@ -6,7 +6,7 @@
   "zh_tokenize_type": "CHAR",
   "train_size": 0.8,
   "BEAM_SIZE": 3,
-  "validate_from_txt": "True",
+  "validation_data": "True",
   "num_validate_sentences": 200,
   "validation_freq": 1,
   "max_checkpoints_num": 5,
@@ -14,7 +14,7 @@
   "checkpoint_name": "4layers512units",
   "num_eval": 5,
   "BUFFER_SIZE": 20000,
-  "EPOCHS": 10,
+  "EPOCHS": 1,
   "num_sentences": 1000,
   "BATCH_SIZE": 32,
   "num_layers": 4,
