--- a/hlp/chat/config/config.json
+++ b/hlp/chat/config/config.json
@@ -1,9 +1,10 @@
 {
   "seq2seq": {
-    "vocab_size": 600,
+    "vocab_size": 1000,
     "embedding_dim": 256,
     "units": 1024,
-    "max_train_data_size": 100,
+    "max_train_data_size": 200,
+    "max_valid_data_size": 100,
     "max_length": 40
   },
   "transformer": {
@@ -12,9 +13,10 @@
     "num_heads": 8,
     "units": 512,
     "dropout": 0.1,
-    "vocab_size": 600,
+    "vocab_size": 1000,
     "embedding_dim": 256,
-    "max_train_data_size": 100,
+    "max_train_data_size": 200,
+    "max_valid_data_size": 100,
     "max_length": 40
   },
   "smn": {
@@ -42,11 +44,16 @@
   "ubuntu_tokenized_data": "data\\ubuntu_train.txt",
   "ubuntu_valid_data": "data\\ubuntu_valid.txt",
   "candidate_database": "data\\candidate.json",
+  "qa_tokenized_data": "data\\tokenized.txt",
+  "history_image_dir": "data\\history\\",
+  "valid_data_fn": "data\\valid_lccc.txt",
+  "valid_freq": 5,
   "solr_server": "http://49.235.33.100:8983/solr/smn/",
   "batch_size": 32,
   "buffer_size": 20000,
   "beam_size": 3,
-  "epochs": 10,
+  "valid_data_split": 0.2,
+  "epochs": 5,
   "start_sign": "start",
   "end_sign": "end"
 }
