将两个las模型代码整合到两个模块中；修改数据集信息文件名。

--- a/hlp/stt/las/config/config.json
+++ b/hlp/stt/las/config/config.json
@@ -39,7 +39,7 @@
         "record_second": 2
     },
     "data": {
-        "dataset_information_path": "./dataset_information.json",
+        "dataset_information_path": "./ds_info.json",
         "dataset_name": "number",
         "n_mfcc": 39,
         "audio_feature_type": "mfcc",
