修改数据集信息文件名。

--- a/hlp/stt/ds2/config.json
+++ b/hlp/stt/ds2/config.json
@@ -37,7 +37,7 @@
         "history_img_dir": "./history_img/"
     },
     "preprocess": {
-        "dataset_information_path": "./dataset_information.json",
+        "dataset_information_path": "./ds_info.json",
         "dataset_name": "librispeech",
         "text_row_style": 1,
         "text_process_mode": "en_char"
