--- a/hlp/stt/las/config/config.json
+++ b/hlp/stt/las/config/config.json
@@ -10,7 +10,8 @@
         "validation_data": true,
         "validation_size": 20,
         "validation_percent": 2,
-        "val_batch_size": 1
+        "val_batch_size": 1,
+        "model_type": "las_d_w"
     },
     "test": {
         "wav_path": ".\\data\\number\\wav_test",
@@ -19,9 +20,15 @@
         "batch_size": 1,
         "warning": "batch_size can only be 1"
     },
-    "model": {
+    "las_model": {
         "embedding_dim": 256,
         "units": 512
+    },
+    "las_d_w_model": {
+        "d": 2,
+        "w": 256,
+        "emb_dim": 256,
+        "dec_units": 256
     },
     "checkpoint": {
         "directory": "./checkpoints_1",
