--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ python-speech-features==0.6
 matplotlib==3.3.2
 numpy==1.18.5
 scikit-learn==0.23.2
+scipy==1.5.3
 tensorflow==2.3.1
 tensorflow-datasets==3.2.1
 pyaudio==0.2.11
