--- a/hlp/chat/config/config.json
+++ b/hlp/chat/config/config.json
@@ -13,7 +13,7 @@
     "num_heads": 8,
     "units": 512,
     "dropout": 0.1,
-    "vocab_size": 1000,
+    "vocab_size": 1500,
     "embedding_dim": 256,
     "max_train_data_size": 200,
     "max_valid_data_size": 100,
@@ -35,7 +35,7 @@
   "transformer_dict_fn": "data\\transformer_dict.json",
   "transformer_checkpoint": "checkpoints\\transformer",
   "smn_dict_fn": "data\\smn_dict_fn",
-  "smn_checkpoint": "checkpoint\\smn",
+  "smn_checkpoint": "checkpoints\\smn",
   "resource_data": "data\\xiao_huang_jie.txt",
   "tokenized_data": "data\\xiao_huang_jie_tokenized.txt",
   "lccc_data": "data\\LCCC.json",
@@ -53,7 +53,7 @@
   "buffer_size": 20000,
   "beam_size": 3,
   "valid_data_split": 0.2,
-  "epochs": 5,
+  "epochs": 10,
   "start_sign": "start",
   "end_sign": "end"
 }
