--- a/hlp/mt/config/config.json
+++ b/hlp/mt/config/config.json
@@ -32,5 +32,21 @@
   "path_to_val_file": "./data/anki/en-zh_val.txt",
   "encoded_sequences_path_prefix": "./data/encoded_corpus/encoded_sequences_",
   "tokenizer_path_prefix": "./data/tokenizer/tokenizer_",
-  "checkpoint_path_dir": "./checkpoints"
+  "checkpoint_path_dir": "./checkpoints",
+
+  "language_model": {
+    "path_to_train_file_lm": "./data/anki/anki-cmn-eng.txt",
+    "language": "zh",
+    "en_tokenize_type": "WORD",
+    "zh_tokenize_type": "CHAR",
+    "EPOCHS": 10,
+    "num_sentences": 1000,
+    "BATCH_SIZE": 32,
+    "train_size": 0.8,
+    "d_rnn": 200,
+    "d_embedding": 256,
+    "validation_freq": 1,
+    "max_checkpoints_num": 5,
+    "checkpoints_save_freq": 5
+  }
 }
