方法改名；增加注释；调整代码格式；变量改名。

--- a/hlp/stt/las/config/config.json
+++ b/hlp/stt/las/config/config.json
@@ -44,7 +44,7 @@
         "file_name": "output.wav"
     },
     "data": {
-        "dataset_information_path": "./ds_info.json",
+        "dataset_info_path": "./ds_info.json",
         "dataset_name": "number",
         "n_mfcc": 39,
         "audio_feature_type": "mfcc"
