import使用绝对路径

--- a/hlp/mt/config/config.json
+++ b/hlp/mt/config/config.json
@@ -7,6 +7,7 @@
   "train_size": 0.8,
   "BEAM_SIZE": 3,
   "validation_data": "True",
+  "checkpoint_ensembling": "False",
   "num_validate_sentences": 200,
   "validation_freq": 1,
   "max_checkpoints_num": 5,
