--- a/hlp/stt/las/config/config.json
+++ b/hlp/stt/las/config/config.json
@@ -1,21 +1,18 @@
 {
     "train": {
         "epochs": 20,
-        "wav_path": ".\\data\\number\\wav_train",
-        "label_path": ".\\data\\number\\data_train.txt",
-        "val_wav_path": ".\\data\\number\\wav_validation",
-        "val_label_path": ".\\data\\number\\data_val.txt",
-        "train_batch_size": 32,
-        "num_examples": 100,
-        "validation_data": true,
+        "train_data_path": "../data/LibriSpeech/train-clean-5", 
+        "val_data_path": null,
+        "train_batch_size": 2,
+        "num_examples": 10,
+        "validation_data": false,
         "validation_size": 20,
         "validation_percent": 2,
         "val_batch_size": 1,
         "model_type": "las_d_w"
     },
     "test": {
-        "wav_path": ".\\data\\number\\wav_test",
-        "label_path": ".\\data\\number\\data_test.txt",
+        "test_data_path": "../data/LibriSpeech/dev-clean-2",
         "test_num": 20,
         "batch_size": 1,
         "beam_size": 2
@@ -45,7 +42,7 @@
     },
     "data": {
         "dataset_info_path": "./ds_info.json",
-        "dataset_name": "number",
+        "dataset_name": "librispeech",
         "n_mfcc": 39,
         "audio_feature_type": "mfcc",
         "text_process_mode": "las_en_char"
