修改方法和变量名；缺省epoch改为4；修改方法注释；增加输出提示信息。

--- a/hlp/mt/config/config.json
+++ b/hlp/mt/config/config.json
@@ -6,7 +6,7 @@
   "zh_tokenize_type": "CHAR",
   "train_size": 0.9,
   "BEAM_SIZE": 3,
-  "validation_data": "True",
+  "validation_data": "False",
   "checkpoint_ensembling": "True",
   "num_validate_sentences": 200,
   "validation_freq": 1,
@@ -15,7 +15,7 @@
   "checkpoint_name": "4layers512units",
   "num_eval": 5,
   "BUFFER_SIZE": 20000,
-  "EPOCHS": 1,
+  "EPOCHS": 4,
   "num_sentences": 1000,
   "BATCH_SIZE": 32,
   "num_layers": 4,
