--- a/hlp/stt/las/config/config.json
+++ b/hlp/stt/las/config/config.json
@@ -22,6 +22,12 @@
         "units": 512
     },
     "las_d_w_model": {
+        "cnn1_filters": 2,
+        "cnn1_kernel_size": 3,
+        "cnn2_filters": 2,
+        "cnn2_kernel_size": 3,
+        "max_pool_strides": 2,
+        "max_pool_size": 8,
         "d": 1,
         "w": 256,
         "emb_dim": 256,
