方法改名和配置属性改名。

--- a/hlp/stt/ds2/config.json
+++ b/hlp/stt/ds2/config.json
@@ -37,7 +37,7 @@
         "history_img_dir": "./history_img/"
     },
     "preprocess": {
-        "dataset_information_path": "./ds_info.json",
+        "dataset_info_path": "./ds_info.json",
         "dataset_name": "thchs30",
         "text_process_mode": "en_char"
     }
