修改注释；增加提示信息；修改缺省配置。

--- a/hlp/stt/ds2/config.json
+++ b/hlp/stt/ds2/config.json
@@ -1,13 +1,13 @@
 {
     "train": {
-        "train_epochs": 2,
+        "train_epochs": 4,
         "data_path": "../data/data_thchs30/train",
-        "batch_size": 36,
+        "batch_size": 2,
         "num_examples": null
     },
     "valid":{
         "data_path": null,
-        "batch_size": 36,
+        "batch_size": 2,
         "num_examples": null,
         "valid_epoch_freq": 2,
         "valid_percent": 2,
@@ -15,7 +15,7 @@
     },
     "test": {
         "data_path": "../data/data_thchs30/dev",
-        "batch_size": 36,
+        "batch_size": 2,
         "num_examples": null
     },
     "model": {
@@ -39,6 +39,6 @@
     "preprocess": {
         "dataset_info_path": "./ds_info.json",
         "dataset_name": "thchs30",
-        "text_process_mode": "en_char"
+        "text_process_mode": "en_word"
     }
 }
