--- a/hlp/stt/ds2/config.json
+++ b/hlp/stt/ds2/config.json
@@ -39,6 +39,6 @@
     "preprocess": {
         "dataset_info_path": "./ds_info.json",
         "dataset_name": "thchs30",
-        "text_process_mode": "en_word"
+        "text_process_mode": "cn"
     }
 }
